2004-07-09  Joel Rosdahl  <joel@rosdahl.net>

	* Released version 0.4.2.

	* debian/rules: Remove built *.pyc files before making package.

	* irclib.py (DEBUG):
	* debian/changelog:
	* python-irclib.spec.in:
	Preparations for version 0.4.2.

	* irclib.py (ServerNotConnectedError): New exception.
	(ServerConnection.send_raw): Fix bug #922446, "Raise
	IllegalStateException in send_raw when disconnected".

2003-10-30  Joel Rosdahl  <joel@rosdahl.net>

	* Released version 0.4.1.

	* debian/examples: Added dccreceive and dccsend as example files
	in Debian.

	* python-irclib.spec.in: Likewise.

2003-10-29  Joel Rosdahl  <joel@rosdahl.net>

	* debian: Added Debian packaging files.

	* setup.py.in: Create setup.py from setup.py.in.

	* python-irclib.spec.in: RPM spec file from Gary Benson.

	* testbot.py (TestBot.on_nicknameinuse): New method.

	* irclib.py (ServerConnection.process_data): Record nickname when
	welcome message is sent to trap nickname change triggered in a
	nicknameinuse callback.

	* ircbot.py (SingleServerIRCBot._on_join): Use
	Connection.get_nickname instead of relying on self._nickname.
	(SingleServerIRCBot._on_kick): Likewise.
	(SingleServerIRCBot._on_part): And here too.
	(SingleServerIRCBot._on_nick): No need to remember nickname change
	here.

2003-08-31  Joel Rosdahl  <joel@rosdahl.net>

	* Released version 0.4.0.

	Implemented DCC support (based on patches from Adam Langley and
	Marco Bettio):

	* irclib.py (IRC.dcc): New method.
	(DCCConnectionError): New class.
	(DCCConnection): New class.
	(SimpleIRCClient.__init__): Added dcc_connections attribute.
	(SimpleIRCClient._dcc_disconnect): New method.
	(SimpleIRCClient.connect): Added localaddress and
	localport parameters. The socket will be bound accordingly before
	connecting.
	(SimpleIRCClient.dcc_connect): New method.
	(SimpleIRCClient.dcc_listen): New method.
	(ip_numstr_to_quad): New function.
	(ip_quad_to_numstr): New function.
