@@ -1,3 +1,8 @@
+2005-01-17  Joel Rosdahl  <joel@rosdahl.net>
+
+	* ircbot.py (SingleServerIRCBot.jump_server): Improved jump_server
+	behaviour. Patch from Jeff Huang.
+
 2004-07-09  Joel Rosdahl  <joel@rosdahl.net>
 
 	* Released version 0.4.2.
